# native-sdk

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MODERNIZATION.md  MonorepoPackages.cmake  README.md  androidtest.sh  bench.sh  build.sh  check-include-dag.py  check-proto-sync.sh  clean.sh  convert-to-import-std.py  create-streamr-xcframework.pl  import-std-findings.md  install-prerequisities.sh  install-submodules.sh  install-vcpkg.sh  install.sh  iossmoke.sh  iostest.sh  lint.sh  merge-dependencies.sh  module-sloc-dedup-plan.md  package-lock.json  sync-cmake-files.sh  test.sh  trackerless-network-completion-plan.md  vcpkg.json
.githooks/: pre-push
.github/: labeler.yml
.github/workflows/: androidrelease.yml  ios_build.yml  iosrelease.yml  release.yml  validate.yml  validateandroid.yml  validateios.yml
.github/workflows/reusable/cached-install/: action.yml  action_ios.yml
.github/workflows/reusable/cached-install-ios/: action.yml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/actions/trunk-upgrade-available/: 2024-06-08-04-50-01.420.yaml  2024-06-08-04-50-01.489.yaml  2024-06-17-16-17-14.597.yaml
cmake/: StreamrModules.cmake  monorepoPackage.cmake
overlayports/: README.md
overlayports/fmt/: fix-cstdlib-include.patch  portfile.cmake
overlayports/folly/: JUSTIFICATION.md  disable-cxa-init-primary-exception.patch  disable-groupvarint.patch  fix-android-remainder.patch  fix-anon-namespace-in-header-for-cxx-modules.patch  fix-cursor.patch  fix-missing-exception-include.patch  fix-range.patch  portfile.cmake  vcpkg.json
overlayports/libdatachannel/: fix-cmakelists.patch  portfile.cmake
overlayports/protobuf/: JUSTIFICATION.md  fix-static-varint-parse-for-cxx-modules.patch  portfile.cmake
overlayports/secp256k1/: JUSTIFICATION.md  portfile.cmake
overlayports/usrsctp/: JUSTIFICATION.md  add-iffaddrs-include.patch  fix-cmake-version.patch  fix-missing-route-header-ios.patch  portfile.cmake
overlaytriplets/: arm64-android.cmake  arm64-ios.cmake  arm64-linux.cmake  arm64-osx.cmake  x64-linux.cmake  x64-osx.cmake
test/ios/iOSUnitTesting/: Info.plist  iostest.sh
test/ios/iOSUnitTesting/Data/: data.0~1jPHcbtAZ-mE39amyaTOmSTEiqnR1nZgS5cXloyeLhMiP15ZzbhWBWjfDgUxvc3SWylq2u_YIDMTy8t9s5H4UA==  data.0~56aYZRiDfNe2O5yH7DiPEGmQGWBx3QPqltGoEPntCEhBi096Mxjg0srKYyFHrgpJ_KXvhtmR5b27O7wg5dWWUw==  (+4 more)
toolchains/: ios.toolchain.cmake  streamr-ios.toolchain.cmake
(+20 files in other folders)
